--- a/src/components/details/details.css
+++ b/src/components/details/details.css
@@ -6,6 +6,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        gap: 10px;
         border-bottom: 1px solid #dddddd35;
 
         .img {
@@ -17,7 +18,7 @@
         }
         
         p {
-            margin: -20px;
+            margin: -15px;
         }
     }
 
@@ -32,7 +33,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
-                margin-top: -10px;
+                margin-top: -14px;
 
                 .img {
                     width: 10px;
@@ -96,6 +97,15 @@
 
             &:hover {
                 background-color: rgba(220, 20, 60, 0.796);
+            }
+
+            &.btn {
+                padding: 5px;
+                background-color: #1a73e8;
+            }
+
+            &.btn:hover {
+                background-color: #0459c8;
             }
         }
     }
