--- a/src/components/lists/userinfo/userinfo.css
+++ b/src/components/lists/userinfo/userinfo.css
@@ -9,11 +9,15 @@
         align-items: center;
         gap: 20px;
 
-        .img {
+        img {
             width: 50px;
             height: 50px;
             border-radius: 50%;
             object-fit: cover;
+        }
+
+        h2 {
+            font-size: 20px;
         }
     }
 
