--- a/src/components/details/details.css
+++ b/src/components/details/details.css
@@ -9,7 +9,7 @@
         gap: 10px;
         border-bottom: 1px solid #dddddd35;
 
-        .img {
+        img {
             width: 100px;
             height: 100px;
             border-radius: 50%;
