--- a/src/components/lists/chatlist/adduser/addUser.css
+++ b/src/components/lists/chatlist/adduser/addUser.css
@@ -43,7 +43,7 @@
             align-items: center;
             gap: 20px;
 
-            .img {
+            img {
                 width: 50px;
                 height: 50px;
                 border-radius: 50%;
