--- a/src/components/lists/chatlist/chatlist.css
+++ b/src/components/lists/chatlist/chatlist.css
@@ -47,7 +47,7 @@
         cursor: pointer;
         border-bottom: 1px solid #dddddd35;
 
-        .img {
+        img {
             width: 50px;
             height: 50px;
             border-radius: 50%;
