--- a/src/components/chats/chat.css
+++ b/src/components/chats/chat.css
@@ -81,10 +81,10 @@
                 }
             }
 
-            .img {
-                width: 30px;
-                height: 30px;
-                border-radius: 50%;
+            img {
+                width: 100%;
+                height: 200px;
+                border-radius: 10px;
                 object-fit: cover;
             }
 
@@ -93,14 +93,7 @@
                 display: flex;
                 flex-direction: column;
                 gap: 5px;
-
-                .img {
-                    width: 100%;
-                    height: 200px;
-                    border-radius: 10px;
-                    object-fit: cover;
-                }
-
+                
                 p {
                     padding: 20px;
                     background-color: rgba(14, 19, 28, 0.3);
