--- a/src/components/chats/chat.css
+++ b/src/components/chats/chat.css
@@ -1,5 +1,5 @@
 .chat {
-    flex: 2;
+    flex: 2.5;
     border-left: 1px solid #dddddd35;
     border-right: 1px solid #dddddd35;
     height: 100%;
@@ -7,7 +7,7 @@
     flex-direction: column;
 
     .top {
-        padding: 20px;
+        padding: 10px 10px 1px 10px;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -16,12 +16,13 @@
         .user {
             display: flex;
             align-items: center;
-            gap: 20px;
+            gap: 10px;
 
             img {
-                width: 60px;
-                height: 60px;
+                width: 45px;
+                height: 45px;
                 border-radius: 50%;
+                margin-bottom: 10px;
                 object-fit: cover;
                 cursor: pointer;
             }
@@ -32,7 +33,7 @@
                 gap: 5px;
 
                 span {
-                    font-size: 18px;
+                    font-size: 15px;
                     font-weight: bold;
                     margin-bottom: -10px;
                     cursor: pointer;
@@ -51,23 +52,23 @@
             gap: 20px;
 
             .img {
-                width: 20px;
-                height: 20px;
+                width: 15px;
+                height: 15px;
                 cursor: pointer;
             }
         }
     }
 
     .center {
-        padding: 20px;
+        padding: 10px;
         flex: 1;
         overflow: scroll;
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 10px;
 
         .message {
-            max-width: 70%;
+            max-width: 30%;
             display: flex;
             gap: 20px;
 
@@ -77,13 +78,17 @@
                 .text {
                     p {
                         background-color: #5183fe;
+                        align-items: flex-end;
                     }
+                }
+                span {
+                    align-self: self-end;
                 }
             }
 
             img {
-                width: 100%;
-                height: 200px;
+                width: 100px;
+                height: 100px;
                 border-radius: 10px;
                 object-fit: cover;
             }
@@ -95,35 +100,37 @@
                 gap: 5px;
                 
                 p {
-                    padding: 20px;
+                    padding: 10px;
                     background-color: rgba(14, 19, 28, 0.3);
                     border-radius: 10px;
+                    align-items: flex-end;
+                    font-size: 11px;
                 }
 
                 span {
-                    font-size: 13px;
+                    font-size: 8px;
                 }
             }
         }
     }
 
     .bottom {
-        padding: 20px;
+        padding: 8px;
         display: flex;
         align-items: center;
         justify-content: space-between;
         border-top: 1px solid #dddddd35;
-        gap: 20px;
+        gap: 10px;
         margin-top: auto;
 
         .icons {
             display: flex;
-            gap: 20px;
+            gap: 10px;
         }
         
        .img {
-            width: 20px;
-            height: 20px;
+            width: 15px;
+            height: 15px;
             cursor: pointer;
         }
 
@@ -133,9 +140,9 @@
             border: none;
             outline: none;
             color: white;
-            padding: 10px;
+            padding: 8px;
             border-radius: 10px;
-            font-size: 16px;
+            font-size: 12px;
 
             &:disabled {
                 background-color: #94a7d8ca;
@@ -148,15 +155,15 @@
 
             .picker {
                 position: absolute;
-                bottom: 50px;
-                left: 0;
+                bottom: 30px;
+                right: -60px;
             }
         }
 
         .btn {
             background-color: #5183fe;
             color: white;
-            padding: 10px 20px;
+            padding: 8px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
