--- a/src/components/details/details.css
+++ b/src/components/details/details.css
@@ -1,32 +1,45 @@
 .detail {
     flex: 1;
 
+    .back-arrow {
+        font-size: 20px;
+        cursor: pointer;
+        color: #fff;
+    }
+
     .user {
         padding: 30px 20px;
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 10px;
+        gap: 8px;
         border-bottom: 1px solid #dddddd35;
 
         img {
-            width: 100px;
-            height: 100px;
+            width: 50px;
+            height: 50px;
             border-radius: 50%;
             object-fit: cover;
             margin-top: -20px;
         }
         
+        h2 {
+            margin-top: -4px;
+            font-size: 15px;
+        }
+
         p {
             margin: -15px;
+            font-size: 11px;
         }
     }
 
     .info {
-        padding: 20px;
+        padding: 15px;
         display: flex;
         flex-direction: column;
         gap: 30px;
+        margin-top: 20px;
 
         .option {
             .title {
@@ -36,19 +49,23 @@
                 margin-top: -14px;
 
                 .img {
-                    width: 10px;
-                    height: 10px;
+                    width: 8px;
+                    height: 8px;
                     background-color: rgba(17, 25, 40, 0.3);
-                    padding: 5px;
+                    padding: 3px;
                     border-radius: 50%;
                     cursor: pointer;
+                }
+
+                span {
+                    font-size: 12px;
                 }
             }
         }
         .photo {
             display: flex;
             flex-direction: column;
-            gap: 20px;
+            gap: 10px;
             margin-top: -20px;
 
             .item {
@@ -57,8 +74,8 @@
                 justify-content: space-between;
 
                 .img1 {
-                    width: 10px;
-                    height: 10px;
+                    width: 8px;
+                    height: 8px;
                     background-color: rgba(17, 25, 40, 0.3);
                     padding: 5px;
                     border-radius: 50%;
@@ -71,14 +88,14 @@
                     gap: 20px;
 
                     .img {
-                        width: 40px;
-                        height: 40px;            
+                        width: 25px;
+                        height: 25px;            
                         border-radius: 5px;
                         object-fit: cover;
                     }
 
                     span {
-                        font-size: 14px;
+                        font-size: 12px;
                         color: lightgray;
                         font-weight: 300;
                     }
@@ -86,14 +103,22 @@
             }
         }
 
+        .button-container {
+            display: flex;
+            justify-content: space-between; 
+            gap: 10px; 
+            margin-top: 10px; 
+          }
+
         button {
-            padding: 5px 20px;
+            padding: 5px 10px;
             background-color: rgba(230, 74, 105, 0.553);
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
             margin-top: -20px;
+            flex: 1;
 
             &:hover {
                 background-color: rgba(220, 20, 60, 0.796);
