--- a/src/components/lists/chatlist/chatlist.css
+++ b/src/components/lists/chatlist/chatlist.css
@@ -4,17 +4,17 @@
     .search {
         display: flex;
         align-items: center;
-        gap: 20px;
-        padding: 20px;
+        gap: 10px;
+        padding: 10px;
 
         .searchbar {
             flex: 1;
             background-color: rgba(14, 19, 28, 0.5);
             display: flex;
             align-items: center;
-            gap: 20px;
+            gap: 10px;
             border-radius: 10px;
-            padding: 10px;
+            padding: 6px;
 
             input {
                 background-color: transparent;
@@ -24,17 +24,18 @@
                 flex: 1;
             }
             .img {
-                width: 20px;
-                height: 20px;
+                width: 10px;
+                height: 10px;
             }
         }
 
         .add {
-            width: 16px;
-            height: 16px;
+            width: 10px;
+            height: 10px;
             background-color: rgba(14, 19, 28, 0.5);
-            padding: 10px;
+            padding: 6px;
             border-radius: 10px;
+            margin-top: 4px;
             cursor: pointer;
         }
     }
@@ -43,13 +44,13 @@
         display: flex;
         align-items: center;
         gap: 20px;
-        padding: 20px;
+        padding: 5px;
         cursor: pointer;
         border-bottom: 1px solid #dddddd35;
 
         img {
-            width: 50px;
-            height: 50px;
+            width: 45px;
+            height: 45px;
             border-radius: 50%;
             object-fit: cover;
         }
@@ -60,11 +61,12 @@
             gap: 10px;
 
             span {
-                font-weight: 500;
+                font-weight: 400;
+                font-size: 12.5px;
             }
 
             p {
-                font-size: 14px;
+                font-size: 10px;
                 font-weight: 300;
                 margin: 0%;
             }
