--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -20,7 +20,7 @@
             gap: 20px;
 
             input {
-                padding: 20px;
+                padding: 10px;
                 border: none;
                 outline: none;
                 background-color: rgba(20, 28, 43, 0.6);
@@ -30,6 +30,7 @@
             
             label {
                 width: 100%;
+                font-size: 15px;
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
@@ -37,8 +38,8 @@
                 text-decoration: underline;
 
                 img {
-                    width: 50px;
-                    height: 50px;
+                    width: 40px;
+                    height: 40px;
                     border-radius: 10px;
                     object-fit: cover;
                     opacity: 0.7;
@@ -47,7 +48,7 @@
 
             button {
                 width: 100%;
-                padding: 20px;
+                padding: 10px;
                 border: none;
                 background-color: #479ce6;
                 color: white;
